--- a/notebooks/distance_metrics.ipynb
+++ b/notebooks/distance_metrics.ipynb
@@ -132,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating available metrics:  29%|██▊       | 2/7 [00:00<00:00, 10.92it/s]"
+      "Evaluating available metrics:  29%|██▊       | 2/7 [00:00<00:00, 11.24it/s]"
      ]
     },
     {
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating available metrics:  71%|███████▏  | 5/7 [00:00<00:00,  6.25it/s]"
+      "Evaluating available metrics:  71%|███████▏  | 5/7 [00:00<00:00,  6.41it/s]"
      ]
     },
     {
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating available metrics: 100%|██████████| 7/7 [00:01<00:00,  5.63it/s]\n"
+      "Evaluating available metrics: 100%|██████████| 7/7 [00:01<00:00,  5.61it/s]\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
     "           \"Linf\": faiss.METRIC_Linf, # infinity distance\n",
     "           \"Camberra\": faiss.METRIC_Canberra,\n",
     "           # \"JensenShannon\": faiss.METRIC_JensenShannon, # NOTE: This is to be used between two probability arrays. So it doesn't make sense in this case.   \n",
-    "           # \"Jaccard\": faiss.METRIC_Jaccard, # NOTE: This is not working properly \n",
+    "           # \"Jaccard\": faiss.METRIC_Jaccard, # NOTE: This is not working properly I still am not sure why\n",
     "           \"HNSWFlat\": \"HNSWFlat\",\n",
     "           \"KD-Trees\": \"KD-Trees\"\n",
     "}\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,8 +266,8 @@
        "      <td>0.783978</td>\n",
        "      <td>Inner Product</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.073986</td>\n",
-       "      <td>30.032687</td>\n",
+       "      <td>0.034996</td>\n",
+       "      <td>63.492911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -276,8 +276,8 @@
        "      <td>0.784878</td>\n",
        "      <td>L2</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.080597</td>\n",
-       "      <td>27.569209</td>\n",
+       "      <td>0.117768</td>\n",
+       "      <td>18.867634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -286,8 +286,8 @@
        "      <td>0.776328</td>\n",
        "      <td>L1</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.256344</td>\n",
-       "      <td>8.668045</td>\n",
+       "      <td>0.232653</td>\n",
+       "      <td>9.550698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -296,8 +296,8 @@
        "      <td>0.513501</td>\n",
        "      <td>Linf</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.124348</td>\n",
-       "      <td>17.869217</td>\n",
+       "      <td>0.136118</td>\n",
+       "      <td>16.324108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -306,18 +306,18 @@
        "      <td>0.725023</td>\n",
        "      <td>Camberra</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.168074</td>\n",
-       "      <td>13.220357</td>\n",
+       "      <td>0.164215</td>\n",
+       "      <td>13.531034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.437894</td>\n",
-       "      <td>0.655266</td>\n",
-       "      <td>0.713771</td>\n",
+       "      <td>0.439244</td>\n",
+       "      <td>0.657966</td>\n",
+       "      <td>0.716472</td>\n",
        "      <td>HNSWFlat</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.023146</td>\n",
-       "      <td>95.998676</td>\n",
+       "      <td>0.024846</td>\n",
+       "      <td>89.431475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -326,8 +326,8 @@
        "      <td>0.786679</td>\n",
        "      <td>KD-Trees</td>\n",
        "      <td>2222</td>\n",
-       "      <td>0.457060</td>\n",
-       "      <td>4.861508</td>\n",
+       "      <td>0.477911</td>\n",
+       "      <td>4.649401</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -335,25 +335,25 @@
       ],
       "text/plain": [
        "       top1      top5     top10         metric  n_tests  elapsed_seconds  \\\n",
-       "0  0.479748  0.719622  0.783978  Inner Product     2222         0.073986   \n",
-       "1  0.477498  0.718272  0.784878             L2     2222         0.080597   \n",
-       "2  0.482898  0.719622  0.776328             L1     2222         0.256344   \n",
-       "3  0.282628  0.454095  0.513501           Linf     2222         0.124348   \n",
-       "4  0.427543  0.665167  0.725023       Camberra     2222         0.168074   \n",
-       "5  0.437894  0.655266  0.713771       HNSWFlat     2222         0.023146   \n",
-       "6  0.474797  0.718722  0.786679       KD-Trees     2222         0.457060   \n",
+       "0  0.479748  0.719622  0.783978  Inner Product     2222         0.034996   \n",
+       "1  0.477498  0.718272  0.784878             L2     2222         0.117768   \n",
+       "2  0.482898  0.719622  0.776328             L1     2222         0.232653   \n",
+       "3  0.282628  0.454095  0.513501           Linf     2222         0.136118   \n",
+       "4  0.427543  0.665167  0.725023       Camberra     2222         0.164215   \n",
+       "5  0.439244  0.657966  0.716472       HNSWFlat     2222         0.024846   \n",
+       "6  0.474797  0.718722  0.786679       KD-Trees     2222         0.477911   \n",
        "\n",
        "   preds_per_second_X1000  \n",
-       "0               30.032687  \n",
-       "1               27.569209  \n",
-       "2                8.668045  \n",
-       "3               17.869217  \n",
-       "4               13.220357  \n",
-       "5               95.998676  \n",
-       "6                4.861508  "
+       "0               63.492911  \n",
+       "1               18.867634  \n",
+       "2                9.550698  \n",
+       "3               16.324108  \n",
+       "4               13.531034  \n",
+       "5               89.431475  \n",
+       "6                4.649401  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        " 'preds_per_second_X1000']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
             0.4828982898289829,
             0.2826282628262826,
             0.42754275427542754,
-            0.4378937893789379,
+            0.43924392439243926,
             0.4747974797479748
            ]
           },
@@ -458,7 +458,7 @@
             0.7196219621962197,
             0.4540954095409541,
             0.6651665166516652,
-            0.6552655265526552,
+            0.6579657965796579,
             0.7187218721872187
            ]
           },
@@ -478,48 +478,48 @@
             0.7763276327632763,
             0.5135013501350135,
             0.725022502250225,
-            0.7137713771377138,
+            0.7164716471647165,
             0.7866786678667866
            ]
           },
           {
            "constraintrange": [
-            0.02314615249633789,
-            0.4570598602294922
+            0.02484583854675293,
+            0.47791099548339844
            ],
            "label": "elapsed_seconds",
            "range": [
-            0.02314615249633789,
-            0.4570598602294922
+            0.02484583854675293,
+            0.47791099548339844
            ],
            "values": [
-            0.07398605346679688,
-            0.0805971622467041,
-            0.2563438415527344,
-            0.12434792518615723,
-            0.1680741310119629,
-            0.02314615249633789,
-            0.4570598602294922
+            0.03499603271484375,
+            0.1177678108215332,
+            0.23265314102172852,
+            0.13611769676208496,
+            0.164215087890625,
+            0.02484583854675293,
+            0.47791099548339844
            ]
           },
           {
            "constraintrange": [
-            4.861507634654949,
-            95.99867625306442
+            4.649401292289764,
+            89.43147544884897
            ],
            "label": "preds_per_second_X1000",
            "range": [
-            4.861507634654949,
-            95.99867625306442
+            4.649401292289764,
+            89.43147544884897
            ],
            "values": [
-            30.032687187419437,
-            27.56920886617029,
-            8.668045179243737,
-            17.869216528329815,
-            13.220356914068152,
-            95.99867625306442,
-            4.861507634654949
+            63.492911270983214,
+            18.867634411301456,
+            9.55069847860974,
+            16.32410812742263,
+            13.531034380226723,
+            89.43147544884897,
+            4.649401292289764
            ]
           },
           {
@@ -617,8 +617,9 @@
         "font": {
          "color": "Black",
          "family": "Sans-serif",
-         "size": 13
+         "size": 15
         },
+        "height": 500,
         "template": {
          "data": {
           "bar": [
@@ -1434,7 +1435,11 @@
            "zerolinewidth": 2
           }
          }
-        }
+        },
+        "title": {
+         "text": "metric eval"
+        },
+        "width": 1200
        }
       }
      },
@@ -1451,13 +1456,6 @@
    "metadata": {},
    "source": [
     "## Other metrics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### eval"
    ]
   },
   {
@@ -1884,6 +1882,137 @@
     "from scipy.spatial import distance\n",
     "\n",
     "distance.jaccard(sources_emb[0], targets_emb[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>top1</th>\n",
+       "      <th>top5</th>\n",
+       "      <th>top10</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>elapsed_seconds</th>\n",
+       "      <th>preds_per_second_X1000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.479748</td>\n",
+       "      <td>0.719622</td>\n",
+       "      <td>0.783978</td>\n",
+       "      <td>Inner Product</td>\n",
+       "      <td>0.073986</td>\n",
+       "      <td>30.032687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.477498</td>\n",
+       "      <td>0.718272</td>\n",
+       "      <td>0.784878</td>\n",
+       "      <td>L2</td>\n",
+       "      <td>0.080597</td>\n",
+       "      <td>27.569209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.482898</td>\n",
+       "      <td>0.719622</td>\n",
+       "      <td>0.776328</td>\n",
+       "      <td>L1</td>\n",
+       "      <td>0.256344</td>\n",
+       "      <td>8.668045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.282628</td>\n",
+       "      <td>0.454095</td>\n",
+       "      <td>0.513501</td>\n",
+       "      <td>Linf</td>\n",
+       "      <td>0.124348</td>\n",
+       "      <td>17.869217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.427543</td>\n",
+       "      <td>0.665167</td>\n",
+       "      <td>0.725023</td>\n",
+       "      <td>Camberra</td>\n",
+       "      <td>0.168074</td>\n",
+       "      <td>13.220357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.437894</td>\n",
+       "      <td>0.655266</td>\n",
+       "      <td>0.713771</td>\n",
+       "      <td>HNSWFlat</td>\n",
+       "      <td>0.023146</td>\n",
+       "      <td>95.998676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.474797</td>\n",
+       "      <td>0.718722</td>\n",
+       "      <td>0.786679</td>\n",
+       "      <td>KD-Trees</td>\n",
+       "      <td>0.457060</td>\n",
+       "      <td>4.861508</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       top1      top5     top10         metric  elapsed_seconds  \\\n",
+       "0  0.479748  0.719622  0.783978  Inner Product         0.073986   \n",
+       "1  0.477498  0.718272  0.784878             L2         0.080597   \n",
+       "2  0.482898  0.719622  0.776328             L1         0.256344   \n",
+       "3  0.282628  0.454095  0.513501           Linf         0.124348   \n",
+       "4  0.427543  0.665167  0.725023       Camberra         0.168074   \n",
+       "5  0.437894  0.655266  0.713771       HNSWFlat         0.023146   \n",
+       "6  0.474797  0.718722  0.786679       KD-Trees         0.457060   \n",
+       "\n",
+       "   preds_per_second_X1000  \n",
+       "0               30.032687  \n",
+       "1               27.569209  \n",
+       "2                8.668045  \n",
+       "3               17.869217  \n",
+       "4               13.220357  \n",
+       "5               95.998676  \n",
+       "6                4.861508  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df"
    ]
   },
   {
